# FastReading

./: docker-compose.yml
backend/: Dockerfile  db.sqlite3  pyproject.toml  requirements.txt
backend/backend/: settings.py  urls.py
backend/core/: urls.py  views.py
frontend/: Dockerfile
